# cosmo-store-example

./: .gitignore  Cargo.toml
src/: index_aggregate.rs  main.rs
